--- a/src/pages/EditTask/editTask.css
+++ b/src/pages/EditTask/editTask.css
@@ -10,14 +10,51 @@
 }
 
 .editar form {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+
     width: fit-content;
-    height: fit-content; 
+    height: fit-content;
+
     margin: auto;
-    background-color: rgb(5, 23, 179);
+
     display: flex;
     flex-direction: column;
+
+    padding: 40px;
+    
+    background-color: rgb(43, 57, 185);
 }
 
 .editar form h1{
     font-size: 24px;
+}
+
+.editar form span {
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+}
+
+.editar form .closesave {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.closesave button {
+    padding: 6px;
+    margin-top: 10px;
+    background-color: yellowgreen;
+    border: 1px solid blue;
+    border-radius: 5px;
+    font-size: 11pt;
+    cursor: pointer;
+}
+
+#dataVencimento {
+    width: 235px;
 }
