--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,10 @@
   background-color: rgb(248, 34, 34);
 }
 
+.taskManagerBody li:nth-child(odd).concluded {
+  background-color: rgb(57, 143, 57);
+}
+
 .taskManagerBody li:nth-child(even) {
   color: rgb(43, 57, 185);
 }
@@ -103,4 +107,8 @@
 
 .expired {
   background-color: rgb(250, 129, 129);
+}
+
+.concluded {
+  background-color: rgb(132, 241, 132);
 }
