fix: estilizada modal filtrar por data

--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,14 @@
 }
 
 .taskManager {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   margin: auto;
   width: 800px;
-  border: 1px solid black;
+  height: fit-content;
   
 }
 
